2017-11-09  Keith Marshall  <keith@users.osdn.me>

	Filter out <winsock.h> typedef anomalies.

	* include/winsock.h (FD_SET, PFD_SET, LPFD_SET): If user defines...
	[_WINSOCK_ANOMALOUS_TYPEDEFS]: ...this new feature test macro, expose
	them as type definitions, but warn of potential conflict with...
	[!_WINSOCK_ANOMALOUS_TYPEDEFS] (FD_SET): ...this POSIX.1 mandated
	function; declare its prototype.

2017-11-08  Keith Marshall  <keith@users.osdn.me>

	Overhaul WinSock fd_set content management macros.

	* include/winsock.h (FD_SET, FD_ISSET, FD_CLR, FD_ZERO): Replace the
	original implementations of each of these macros, redirecting to...
	(__FD_SET, __FD_ISSET, __FD_CLR, __FD_ZERO): ...these new, equivalent
	inline functions, respectively; these are more robust, and correct a
	defect in the original FD_SET macro implementation, whereby duplicate
	descriptors could be added to an fd_set array, but would not then be
	removed by the corresponding FD_CLR macro.

	* tests/winsock.at (MINGW_AT_CHECK_WINSOCK): Ensure that all test
	programs are linked with -lwsock32 or -lws2_32, as appropriate; the
	__FD_SET and __FD_ISSET functions are dependent on the __WSAFDIsSet()
	function, which is implemented in each of these libraries.

2017-11-07  Keith Marshall  <keith@users.osdn.me>

	Identify features which have been deprecated in WinSock v2.

	* include/winsock.h (__WINSOCK2_DEPRECATED): Define as nothing.
	* include/winsock2.h (__WINSOCK2_DEPRECATED): Define as equivalent...
	(__MINGW_ATTRIB_DEPRECATED): ...to this.

	* include/winsock.h include/winsock2.h: Qualify...
	(WSAIsBlocking, WSAUnhookBlockingHook, WSASetBlockingHook)
	(WSACancelBlockingCall): ...each of these function prototypes, with...
	(__WINSOCK2_DEPRECATED): ...this attribute.

2017-11-07  Keith Marshall  <keith@users.osdn.me>

	Adopt system naming convention for USE_SYS_TYPES_FD_SET macro.

	* include/winsock.h (USE_SYS_TYPES_FD_SET): Deprecate it; use...